@startuml class-model
skinparam backgroundColor white
skinparam defaultFontSize 13
skinparam classFontSize 13
skinparam classAttributeFontSize 12
skinparam classBackgroundColor #F0EEF8
skinparam classBorderColor #3D108A
skinparam classArrowColor #2E2E38
skinparam classFontColor #2E2E38
skinparam classAttributeIconSize 0
skinparam noteBackgroundColor #FFFDE0
skinparam noteBorderColor #2E2E38
skinparam packageStyle rectangle
skinparam packageBorderColor #2E2E38
skinparam packageFontSize 14
skinparam packageFontStyle bold
skinparam shadowing false

package "Tenancy and roles" {
  class Profile {
    +id : UUID
    +email : String
    +fullName : String
    +role : {owner, superadmin, admin, analyst}
    +bankName : String <<tenant key>>
    +departmentId : UUID
    +disabled : Boolean
    +invitedBy : UUID
    --
    +rank() : Integer
    +canInvite(role) : Boolean
  }

  class Department {
    +id : UUID
    +bankName : String <<tenant key>>
    +name : String
  }
}

package "Questionnaire content (per bank)" {
  class Dimension {
    +bankName : String <<tenant key>>
    +code : String
    +name : String
    +weight : Float
    +proxy : Boolean
  }

  class SubDimension {
    +id : String
    +name : String
  }

  class Indicator {
    +bankName : String <<tenant key>>
    +id : String
    +dim : String
    +sub : String
    +bct : Boolean
    +question : String
    +hint : String
    +rubric : String[5]
  }
}

package "Answers" {
  abstract class Answer {
    +indicatorId : String
    +score : Integer
    +evidence : String
    +skipped : Boolean
    --
    +effectiveScore() : Integer
    +isCapped() : Boolean
  }

  class SoloAnswer {
  }

  class AssessmentAnswer {
    +assessmentId : UUID
    +answeredBy : UUID
  }
}

package "Group assessment" {
  class Assessment {
    +id : UUID
    +bankName : String <<tenant key>>
    +title : String
    +status : {draft, finalized}
    +targetLevel : Integer
    +createdBy : UUID
    +finalizedAt : Date
    --
    +assign(dim, department)
    +finalize() : Submission
  }

  class AssessmentAssignment {
    +assessmentId : UUID
    +dimCode : String
    +departmentId : UUID
  }
}

package "Scoring and results" {
  class "ScoringEngine" as Engine <<service>> {
    +effectiveScore(answer) : Integer
    +subDimScore(sub) : Float
    +dimScore(dim) : Float
    +globalScore() : Float
    +maturityLevel(score) : MaturityLevel
    +bctRate() : Integer
    +buildRoadmap() : Recommendation[]
  }

  class Submission {
    +id : UUID
    +analystId : UUID
    +bankName : String <<tenant key>>
    +globalScore : Float
    +maturityLevel : Integer
    +bctRate : Integer
    +dimensionScores : JSON
    +answers : JSON
    +profile : JSON
    +createdAt : Date
  }

  class MaturityLevel {
    +level : Integer
    +cmmiLabel : String
    +gartnerLabel : String
    +min : Float
    +max : Float
  }

  class Recommendation {
    +dim : String
    +band : String
    +actions : String[3]
  }
}

' --- Generalization (inheritance) ---
Answer <|-- SoloAnswer
Answer <|-- AssessmentAnswer

' --- Associations and multiplicities ---
Profile "0..*" --> "0..1" Department : belongs to
Profile "0..*" --> "0..1" Profile : invited by

' --- Composition (whole owns its parts) ---
Dimension "1" *-- "1..*" SubDimension : contains
SubDimension "1" *-- "1..*" Indicator : groups

Indicator "1" --> "0..1" SoloAnswer : solo answer
Assessment "1" *-- "0..*" AssessmentAssignment : maps
AssessmentAssignment "0..*" --> "1" Department : assigns to
AssessmentAssignment "0..*" --> "1" Dimension : covers
Assessment "1" *-- "0..*" AssessmentAnswer : collects

' --- Dependencies of the scoring service ---
Engine ..> Answer : reads
Engine ..> Dimension : weights
Engine ..> Submission : produces
Engine ..> MaturityLevel : classifies with
Engine ..> Recommendation : builds

note bottom of Profile
  <<tenant key>>: the bank name scopes every row;
  the empty key denotes the EY master template.
  Row-level security confines each row to its bank.
end note

@enduml
